[gd_scene load_steps=4 format=3 uid="uid://bnsrxoqt4w57u"]

[ext_resource type="Theme" uid="uid://dwimkpe573wse" path="res://assets/materialsThemes/menu.tres" id="1_u64dc"]
[ext_resource type="Script" path="res://scenes/ui/settings/volume_slider.gd" id="2_jygwm"]
[ext_resource type="AudioStream" uid="uid://dlr22vboknoka" path="res://assets/sfx/bip2.wav" id="3_we1tx"]

[node name="VolumeSlider" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_u64dc")
script = ExtResource("2_jygwm")
text = "SETTINGS_audio.master"

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SETTINGS_audio.master"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
min_value = -60.0
max_value = 6.0

[node name="Feedback" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_we1tx")
max_polyphony = 2

[connection signal="changed" from="HSlider" to="." method="_on_h_slider_changed"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
